test/extraneous_enddef.ref
Error: File "extraneous_enddef.cppo", line 4, characters 0-8
Error: syntax error
