test/extraneous_enddef.cppo
#define FOO \
  42
(* The following #enddef is extraneous; it should not be there. *)
#enddef
